apps/worker/sintache/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sintache
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: sintache.tailscale-k8s.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: sintache
            port:
              number: 9292
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sintache.tailscale-k8s.hephy.pro
    secretName: sintache-stg-tls
